bynkc/tests/fixtures/positive/147_cron_with_given/src/metrics.bynk
context metrics

capability Pinger {
  fn ping() -> Effect[()]
}

provides Pinger = StubPinger {
  fn ping() -> Effect[()] {
    Effect.pure(())
  }
}

service ticker from cron {
  on schedule("0 * * * *") () -> Effect[Result[(), String]] given Pinger {
    let _ <- Pinger.ping()
    Ok(())
  }
}
