bynkc/tests/fixtures/negative/205_actor_scheme_not_admissible/src/demo.bynk
context demo

service sweeper from cron {
  on schedule("* * * * *") by v: Visitor () -> Effect[Result[(), String]] {
    Ok(())
  }
}
